...
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ResetActivity">

    <Button
      android:id="@+id/password_Reset_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_button"
      android:layout_marginEnd="@dimen/margin_button"
      android:background="@drawable/style_primary"
      android:onClick="resetPassword"
...
      android:textColor="#FFFFFF"
      app:layout_constraintBottom_toTopOf="@+id/guideline10"
      app:layout_constraintEnd_toStartOf="@+id/guideline11"
      app:layout_constraintStart_toStartOf="@+id/guideline13" />

    <EditText
      android:id="@+id/email_Reset_editText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:autofillHints=""
      android:ems="10"
      android:hint="@string/email_reset"
      android:inputType="textEmailAddress"
...
